--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "^16.2.0",
     "@fortawesome/fontawesome-free": "^6.4.0",
     "@ng-bootstrap/ng-bootstrap": "^15.1.2",
+    "@ngrx/effects": "^16.3.0",
     "@ngrx/store": "^16.3.0",
     "@popperjs/core": "^2.11.6",
     "bootstrap": "^5.2.3",
