--- a/angular.json
+++ b/angular.json
@@ -49,6 +49,15 @@
               ],
               "outputHashing": "all"
             },
+            "hi": {
+              "aot": true,
+              "i18n": {
+                "locales": {
+                  "hi": "src/translate/messages.hi.xlf"
+                }
+              },
+              "i18nMissingTranslation": "error"
+            },
             "development": {
               "buildOptimizer": false,
               "optimization": false,
@@ -65,6 +74,9 @@
           "configurations": {
             "production": {
               "browserTarget": "angular-jira-software:build:production"
+            },
+            "hi": {
+              "browserTarget": "i18nDemo:build:hi"
             },
             "development": {
               "browserTarget": "angular-jira-software:build:development"
