--- a/angular.json
+++ b/angular.json
@@ -9,6 +9,7 @@
       "root": "",
       "sourceRoot": "src",
       "prefix": "app",
+     
       "architect": {
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
@@ -16,14 +17,9 @@
             "outputPath": "dist/angular-jira-software",
             "index": "src/index.html",
             "main": "src/main.ts",
-            "polyfills": [
-              "zone.js"
-            ],
+            "polyfills": ["zone.js"],
             "tsConfig": "tsconfig.app.json",
-            "assets": [
-              "src/favicon.ico",
-              "src/assets"
-            ],
+            "assets": ["src/favicon.ico", "src/assets"],
             "styles": [
               "./node_modules/bootstrap/dist/css/bootstrap.min.css",
               "./node_modules/@fortawesome/fontawesome-free/css/all.min.css",
@@ -49,15 +45,7 @@
               ],
               "outputHashing": "all"
             },
-            "hi": {
-              "aot": true,
-              "i18n": {
-                "locales": {
-                  "hi": "src/translate/messages.hi.xlf"
-                }
-              },
-              "i18nMissingTranslation": "error"
-            },
+           
             "development": {
               "buildOptimizer": false,
               "optimization": false,
@@ -75,33 +63,18 @@
             "production": {
               "browserTarget": "angular-jira-software:build:production"
             },
-            "hi": {
-              "browserTarget": "i18nDemo:build:hi"
-            },
             "development": {
               "browserTarget": "angular-jira-software:build:development"
             }
           },
           "defaultConfiguration": "development"
         },
-        "extract-i18n": {
-          "builder": "@angular-devkit/build-angular:extract-i18n",
-          "options": {
-            "browserTarget": "angular-jira-software:build"
-          }
-        },
         "test": {
           "builder": "@angular-devkit/build-angular:karma",
           "options": {
-            "polyfills": [
-              "zone.js",
-              "zone.js/testing"
-            ],
+            "polyfills": ["zone.js", "zone.js/testing"],
             "tsConfig": "tsconfig.spec.json",
-            "assets": [
-              "src/favicon.ico",
-              "src/assets"
-            ],
+            "assets": ["src/favicon.ico", "src/assets"],
             "styles": [
               "@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.css"
