--- a/angular.json
+++ b/angular.json
@@ -9,7 +9,6 @@
       "root": "",
       "sourceRoot": "src",
       "prefix": "app",
-     
       "architect": {
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
@@ -17,9 +16,14 @@
             "outputPath": "dist/angular-jira-software",
             "index": "src/index.html",
             "main": "src/main.ts",
-            "polyfills": ["zone.js"],
+            "polyfills": [
+              "zone.js"
+            ],
             "tsConfig": "tsconfig.app.json",
-            "assets": ["src/favicon.ico", "src/assets"],
+            "assets": [
+              "src/favicon.ico",
+              "src/assets"
+            ],
             "styles": [
               "./node_modules/bootstrap/dist/css/bootstrap.min.css",
               "./node_modules/@fortawesome/fontawesome-free/css/all.min.css",
@@ -45,7 +49,6 @@
               ],
               "outputHashing": "all"
             },
-           
             "development": {
               "buildOptimizer": false,
               "optimization": false,
@@ -72,20 +75,38 @@
         "test": {
           "builder": "@angular-devkit/build-angular:karma",
           "options": {
-            "polyfills": ["zone.js", "zone.js/testing"],
+            "polyfills": [
+              "zone.js",
+              "zone.js/testing"
+            ],
             "tsConfig": "tsconfig.spec.json",
-            "assets": ["src/favicon.ico", "src/assets"],
+            "assets": [
+              "src/favicon.ico",
+              "src/assets"
+            ],
             "styles": [
               "@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.css"
             ],
             "scripts": []
           }
+        },
+        "lint": {
+          "builder": "@angular-eslint/builder:lint",
+          "options": {
+            "lintFilePatterns": [
+              "src/**/*.ts",
+              "src/**/*.html"
+            ]
+          }
         }
       }
     }
   },
   "cli": {
-    "analytics": "4566d753-8e2a-45b9-8f50-b8c926da0f0f"
+    "analytics": "4566d753-8e2a-45b9-8f50-b8c926da0f0f",
+    "schematicCollections": [
+      "@angular-eslint/schematics"
+    ]
   }
 }
