--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "@ng-bootstrap/ng-bootstrap": "^15.1.2",
     "@ngrx/effects": "^16.3.0",
     "@ngrx/store": "^16.3.0",
+    "@ngx-translate/core": "^15.0.0",
+    "@ngx-translate/http-loader": "^8.0.0",
     "@popperjs/core": "^2.11.6",
     "bootstrap": "^5.2.3",
     "rxjs": "~7.8.0",
