--- a/package.json
+++ b/package.json
@@ -30,8 +30,11 @@
     "@ngx-translate/http-loader": "^8.0.0",
     "@popperjs/core": "^2.11.6",
     "bootstrap": "^5.2.3",
+    "file-saver": "^2.0.5",
+    "ngx-papaparse": "^8.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
+    "xlsx": "^0.18.5",
     "zone.js": "~0.13.0"
   },
   "devDependencies": {
@@ -43,6 +46,7 @@
     "@angular-eslint/template-parser": "16.3.1",
     "@angular/cli": "^16.2.10",
     "@angular/compiler-cli": "^16.2.0",
+    "@types/file-saver": "^2.0.7",
     "@types/jasmine": "~4.3.0",
     "@typescript-eslint/eslint-plugin": "5.62.0",
     "@typescript-eslint/parser": "5.62.0",
